tests/snapshots/cli_help__cli_help_play.snap
---
source: tests/cli_help.rs
expression: normalize_help_output(&stdout)
---
Search a provider and play the first matching result. Recognized resource references skip search and play directly

Usage: spotuify play [OPTIONS] <QUERY>

Arguments:
  <QUERY>  Search query, provider URI, or recognized share link

Options:
      --log-format <LOG_FORMAT>  Phase 13 (P13-A) — pick the daemon log format for this run. Also honoured via `SPOTUIFY_LOG_FORMAT` [possible values: text, json]
      --type <KIND>              Media type to search [default: track] [possible values: all, track, episode, show, album, artist, playlist]
      --no-daemon-start          Phase 13 (P13-H) — if set, the CLI never auto-starts the daemon. Errors with a clear hint when the daemon socket is missing
      --provider <PROVIDER>      Provider to target (defaults to the daemon's default provider)
      --format <FORMAT>          Output format for the mutation receipt [default: table] [possible values: table, json, jsonl, csv, ids]
  -o, --set <key.path=value>     Phase 13 (P13-H) — one-shot TOML override (e.g. `-o player.bitrate=160`). Repeatable. Applies for this invocation only; the config file on disk is unchanged
  -h, --help                     Print help
