tests/snapshots/cli_help__cli_help_playlist_add_current.snap
---
source: tests/cli_help.rs
expression: normalize_help_output(&stdout)
---
Add the current track or episode to a playlist

Usage: spotuify playlist add-current [OPTIONS] <PLAYLIST>

Arguments:
  <PLAYLIST>  Playlist ID, URI, or exact name

Options:
      --format <FORMAT>  Output format for the mutation receipt [default: table] [possible values: table, json, jsonl, csv, ids]
  -h, --help             Print help
